small image overflow fix

--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -34,6 +34,7 @@
 
 .img {
     width: 90vw;
+    height: 55vh;
 }
 
 .text-2 {
@@ -57,7 +58,7 @@
     text-decoration: none;
     display: inline-block;
     font-size: 3vh;
-    margin: 2.5vh;
+    margin: 2vh;
 }
 
 .button_bar {
